<resources>
    <string name="app_name">Soool</string>
    <string name="test">test</string>
    <string name="kakao_app_key">f845937bd9afbfbf10ed886935c19219</string>
    <string name="terms_of_service">이용약관</string>
    <string name="facebook_app_id">309267686381329</string>
    <string name="fb_login_protocol_scheme">fb309267686381329</string>
    <string name="soool_version">version: v.1.0.0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="declaration_soool_email">sooolapplication@gmail.com</string>
    <string name="declaration_email_title">신고합니다.</string>
    <string name="home_label_home_tab">홈</string>
    <string name="info_label_info_tab">정보</string>
    <string name="qna_label_qna_tab">커뮤니티</string>
    <string name="my_page_label_qna_my_page">마이페이지</string>
    <string name="my_page_tab_label_my_qna_board">내 글</string>
    <string name="my_page_tab_label_bookmark">스크랩</string>
    <string name="my_page_tab_label_calendar">캘린더</string>
    <string name="my_page_my_qna">내 작성글</string>
    <string name="my_page_my_point">내 포인트</string>
    <string name="my_page_notice_no_bookmark">아직 북마크한 글이 없습니다</string>
    <string name="my_page_notice_no_write_qna">아직 작성한 글이 없습니다</string>
    <string name="my_page_button_move_to_write_qna">글 작성하기</string>
    <string name="my_page_button_add_sch">일정추가</string>
    <string name="my_page_dialog_ask_delete_image">이미지를 삭제하시겠습니까?</string>
    <string name="guide_start_button_text">시작하기</string>
    <string name="guide_explain_community">술에 대한 여러분의 의견을\n 자유롭게 나눠주세요.</string>
    <string name="guide_explain_calendar">술 캘린더에서\n 술 일정관리를 해보아요.</string>
    <string name="guide_label_vote">투표</string>
    <string name="guide_explain_vote">투표 기능을 통해\n 다른 사람들의 의견을 모아보세요.</string>
    <string name="guide_explain_info">술에 관련된 유용한 정보와\n 재미난 리뷰 등을 읽어보세요.</string>
    <string name="guide_explain_app">술의, 술을 위한, 술에 의한\n 술 커뮤니티</string>
    <string name="guide_label_app">술래잡기</string>
    <string name="calendar_notice_no_write_sch">작성된 내용이 없습니다</string>
    <string name="calendar_hint_write_sch">내용을 작성해주세요</string>
    <string name="calendar_sch_content">내용</string>
    <string name="permission_notice_setting_permission">[설정] > [권한]에서 권한을 허용할 수 있습니다.</string>
    <string name="all_button_add">추가하기</string>
    <string name="all_button_modify">수정하기</string>
    <string name="all_button_cancel">취소</string>
    <string name="all_button_ok">확인</string>
    <string name="all_button_save">저장하기</string>
    <string name="all_button_delete">삭제하기</string>
    <string name="all_button_choice">선택</string>
    <string name="all_button_close">닫기</string>
    <string name="all_button_complete">완료</string>
    <string name="all_button_yes">예</string>
    <string name="all_button_no">아니요</string>
    <string name="toast_notice_no_exist_post">마지막 게시물입니다</string>
    <string name="toast_notice_page_error">페이지에 오류가 있습니다</string>
    <string name="toast_notice_one_more">다시 시도해주세요</string>
    <string name="notice_dialog_hint_never_show">다시 보지 않기</string>
    <string name="notice_dialog_logout_title">로그아웃</string>
    <string name="notice_dialog_logout_content">로그아웃을 하시겠습니까? </string>
    <string name="notice_dialog_delete_user_title">회원탈퇴</string>
    <string name="notice_dialog_delete_user_content">회원탈퇴 시, 작성한 게시글과 댓글은 모두 삭제 됩니다.\n그래도 탈퇴 하시겠습니까? </string>
    <string name="notice_dialog_preparing">준비중입니다</string>
    <string name="qna_board_hint_of_choice_tag">주제를 선택해주세요.</string>
    <string name="qna_board_hint_of_write_title">제목을 입력해주세요.</string>
    <string name="qna_board_hint_of_write_content">내용을 입력해주세요.</string>
    <string name="qna_board_notice_text_voting_rules">텍스트 투표 (6개 항목까지 가능합니다)</string>
    <string name="qna_board_notice_image_voting_rules">이미지 투표 (6개 항목까지 가능합니다)</string>
    <string name="qna_board_hint_of_write_vote_content">투표 내용을 입력해주세요.</string>
    <string name="qna_board_button_add_to_vote_item">항목 추가</string>
    <string name="qna_board_text_vote">텍스트</string>
    <string name="qna_board_image_vote">이미지</string>
    <string name="qna_detail_recommend">추천</string>
    <string name="qna_detail_not_recommend">비추천</string>
    <string name="qna_detail_participants_of_voting">참여</string>
    <string name="qna_detail_hint_write_comment">댓글을 입력해주세요</string>
    <string name="qna_detail_button_reply_to_comment">답글달기</string>
    <string name="qna_detail_button_show_sub_comment">답글보기</string>
    <string name="qna_detail_button_report">신고하기</string>
    <string name="qna_detail_comment">댓글</string>
    <string name="qna_detail_sub_comment">답글</string>
    <string name="qna_detail_button_submit_comment">등록</string>
    <string name="qna_detail_button_vote">투표하기</string>
    <string name="main_tab_label_home">홈</string>
    <string name="main_tab_label_info">정보</string>
    <string name="main_tab_label_qna">커뮤니티</string>
    <string name="main_tab_label_my_page">마이페이지</string>
    <string name="drawer_my_account">내 계정</string>
    <string name="drawer_push_notification">푸시 알림 설정</string>
    <string name="drawer_notice">공지사항</string>
    <string name="drawer_report">문의 및 신고</string>
    <string name="drawer_version">버전 정보</string>
    <string name="drawer_handling_privacy">개인정보 취급방침</string>
    <string name="drawer_tos">이용약관</string>
    <string name="drawer_logout">로그아웃</string>
    <string name="sign_up_email">이메일</string>
    <string name="sign_up_disable_email">사용 불가능한 이메일입니다</string>
    <string name="sign_up_usable_email">사용 가능한 이메일입니다</string>
    <string name="sign_up_password">비밀번호</string>
    <string name="sign_up_nickname">닉네임</string>
    <string name="sign_up_disable_nickname">사용 불가능한 닉네임입니다</string>
    <string name="sign_up_usable_nickname">사용 가능한 닉네임입니다</string>
    <string name="sign_up_check_password">비밀번호 확인</string>
    <string name="sign_up_not_match_password">비밀번호가 일치하지 않습니다</string>
    <string name="sign_up_match_password">비밀번호가 일치합니다</string>
    <string name="sign_up_button_check_overlap">중복확인</string>
    <string name="sign_up_button_submit_profile">회원가입하기</string>
    <string name="sign_up_button_move_to_login">로그인하러 가기</string>
    <string name="sign_up_notice_email">*본인의 이메일을 정확히 입력해주세요.</string>
    <string name="profile_email">이메일</string>
    <string name="profile_password">비밀번호</string>
    <string name="profile_nickname">닉네임</string>
    <string name="profile_additional_information">부가정보</string>
    <string name="profile_capacity">주량</string>
    <string name="profile_favorite_drink">즐겨마시는 술</string>
    <string name="profile_reason_of_drinking">술마시는 이유</string>
    <string name="profile_hint_select_item">항목을 선택해주세요</string>
    <string name="profile_button_change_image">프로필 사진 변경하기</string>
    <string name="profile_button_leave">탈퇴하기</string>
    <string name="starting_handling_privacy">개인정보 취급방침</string>
    <string name="starting_tos">이용약관</string>
    <string name="starting_button_agree1">" 및 "</string>
    <string name="starting_button_agree2">에 동의합니다.</string>
    <string name="starting_button_start_kakao">카카오톡으로 시작하기</string>
    <string name="starting_button_start_facebook">페이스북으로 시작하기</string>
    <string name="starting_button_sign_up">직접 가입하기</string>
    <string name="starting_button_move_to_login">로그인하러 가기</string>
    <string name="login_email">이메일</string>
    <string name="login_password">비밀번호</string>
    <string name="login_check_auto_login">자동으로 로그인하기</string>
    <string name="login_button_login">로그인하기</string>
    <string name="login_button_find_password">비밀번호 찾기</string>
    <string name="login_button_sign_up">회원가입하기</string>
    <string name="notice_no_exist_notice">공지 내용이 없습니다</string>
    <string name="notice_label_page">공지사항</string>
    <string name="comment_no_value">아직 댓글이 없습니다. 작성해주세요.</string>
    <string-array name="custom_months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="custom_month_2">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>
    <string-array name="custom_weekdays">
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
        <item>일</item>
    </string-array>
    <string-array name="capacity_array">
        <item>항목을 선택해주세요</item>
        <item>술래Y</item>
        <item>소주 1잔</item>
        <item>소주 반병</item>
        <item>소주 1병</item>
        <item>소주 2병</item>
        <item>소주 3병</item>
        <item>술래K</item>
    </string-array>
    <string-array name="favorite_array">
        <item>항목을 선택해주세요</item>
        <item>맥주</item>
        <item>소주</item>
        <item>고량주</item>
        <item>데킬라</item>
        <item>칵테일</item>
        <item>술래K</item>
    </string-array>
    <string-array name="reason_array">
        <item>항목을 선택해주세요</item>
        <item>술이 좋아서</item>
        <item>술자리가 좋아서</item>
        <item>취하고 싶어서</item>
        <item>이성과의 만남</item>
        <item>외로워서</item>
        <item>술래K</item>
    </string-array>
</resources>