<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:background="@drawable/border_bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/drawupBack"
        android:layout_marginStart="@dimen/all_space_between_18dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="17dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_15dp"
        android:text="@string/all_button_cancel"/>

    <TextView
        android:id="@+id/drawupDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginEnd="@dimen/all_space_between_16dp"
        android:layout_marginBottom="17dp"
        android:layout_alignTop="@+id/drawupBack"
        android:layout_toLeftOf="@+id/drawupEnroll"
        android:textSize="@dimen/text_size_15dp"
        android:text="@string/all_button_delete" />

    <TextView
        android:id="@+id/drawupEnroll"
        android:text="@string/all_button_save"
        android:layout_alignTop="@+id/drawupBack"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="17dp"
        android:textSize="@dimen/text_size_15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>