<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ProfileActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <ImageView
            android:layout_marginTop="32dp"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:id="@+id/profileImage"
            android:src="@drawable/profile_default"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:id="@+id/profileChangeImage"
            android:text="@string/profile_button_change_image"
            android:layout_below="@id/profileImage"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/text_size_14dp"
            android:textColor="@color/greenDark"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grayLight_a50"
            android:layout_marginTop="30dp"
            android:layout_below="@id/profileChangeImage"
            android:id="@+id/profileLineBelowImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_email"
            android:textSize="@dimen/text_size_14dp"
            android:textColor="@color/black"
            android:layout_below="@id/profileLineBelowImage"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/profileHintEmail"
            />

        <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_14dp"

            android:textColor="@color/black"
            android:background="@drawable/edit_text_theme"
            android:layout_alignTop="@id/profileHintEmail"
            android:layout_alignLeft="@id/profileAccountPW"
            android:layout_alignRight="@id/profileAccountPW"
            android:id="@+id/profileAccountEmail"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileHintEmail"
            android:text="@string/profile_nickname"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14dp"
            android:id="@+id/profileHintNick"
            android:layout_marginTop="39dp"
            android:layout_alignLeft="@id/profileHintEmail"/>

        <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_theme"
            android:textSize="@dimen/text_size_14dp"
            android:layout_alignTop="@id/profileHintNick"
            android:layout_alignLeft="@id/profileAccountPW"
            android:layout_alignRight="@id/profileAccountPW"
            android:id="@+id/profileAccountNick"



            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14dp"
            android:id="@+id/profileHintPW"
            android:layout_marginTop="39dp"
            android:layout_below="@id/profileHintNick"
            android:layout_alignLeft="@id/profileHintEmail"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/profileHintPW"
            android:layout_toRightOf="@id/profileHintPW"
            android:layout_marginLeft="24dp"
            android:background="@drawable/edit_text_theme"
            android:id="@+id/profileAccountPW"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_additional_information"
            android:textSize="@dimen/text_size_14dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@id/profileHintPW"
            android:layout_alignLeft="@id/profileHintPW"
            android:layout_marginTop="37dp"
            android:id="@+id/profileAddInfo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_capacity"
            android:id="@+id/profileHintCapacity"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14dp"
            android:layout_alignLeft="@id/profileAddInfo"
            android:layout_alignTop="@id/profileCapacity"
            android:gravity="center"
            android:layout_alignBottom="@id/profileCapacity"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_favorite_drink"
            android:id="@+id/profileHintFavorite"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14dp"
            android:layout_alignLeft="@id/profileAddInfo"
            android:layout_alignTop="@id/profileFavoriteDrinking"
            android:layout_alignBottom="@id/profileFavoriteDrinking"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_reason_of_drinking"
            android:id="@+id/profileHintReason"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14dp"
            android:layout_alignLeft="@id/profileAddInfo"
            android:layout_below="@id/profileHintFavorite"

            android:layout_alignTop="@id/profileReasonOfDrinking"
            android:layout_alignBottom="@id/profileReasonOfDrinking"
            android:gravity="center"
            />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profileCapacity"
            android:layout_marginTop="27dp"
            android:layout_alignLeft="@id/profileFavoriteDrinking"
            android:layout_alignRight="@id/profileFavoriteDrinking"
            android:layout_below="@id/profileAddInfo">
        </Spinner>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileCapacity"
            android:layout_marginTop="27dp"
            android:layout_toRightOf="@id/profileHintFavorite"
            android:layout_marginLeft="10dp"
            android:id="@+id/profileFavoriteDrinking"
            android:layout_alignParentRight="true"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profileReasonOfDrinking"
            android:layout_alignLeft="@id/profileFavoriteDrinking"
            android:layout_alignRight="@id/profileFavoriteDrinking"
            android:layout_below="@id/profileHintFavorite"
            android:layout_marginTop="27dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_greendark_edge"
            android:text="@string/profile_button_leave"
            android:textColor="@color/greenDark"
            android:layout_below="@id/profileHintReason"
            android:layout_marginTop="58dp"
            android:layout_marginBottom="@dimen/all_space_between_18dp"
            android:stateListAnimator="@null"
            android:id="@+id/deleteAccount"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:id="@+id/profileProgress"
            />
    </RelativeLayout>


</ScrollView>