<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingTop="11dp"
    android:paddingBottom="5dp"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="90dp"
        android:layout_weight="1"
        android:id="@+id/tabMain"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:id="@+id/tabMainImage"
            android:src="@drawable/nav_home_off"/>
        <TextView
            android:layout_marginTop="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/tabMainText"
            android:textColor="@color/grayMain"
            android:textSize="@dimen/text_size_12dp"
            android:text="@string/main_tab_label_home"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="90dp"
        android:layout_weight="1"
        android:id="@+id/tabInfo"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:id="@+id/tabInfoImage"
            android:layout_gravity="center"
            android:src="@drawable/nav_info_off"/>
        <TextView
            android:layout_marginTop="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/tabInfoText"
            android:textColor="@color/grayMain"
            android:textSize="@dimen/text_size_12dp"
            android:text="@string/main_tab_label_info"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="90dp"
        android:layout_weight="1"
        android:id="@+id/tabQna"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24.4dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:id="@+id/tabQnaImage"
            android:src="@drawable/nav_qna_off"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_gravity="center"
            android:id="@+id/tabQnaText"
            android:textColor="@color/grayMain"
            android:textSize="@dimen/text_size_12dp"
            android:text="@string/main_tab_label_qna"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="90dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/tabMypage"
        android:layout_height="wrap_content">
        <ImageView

            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:id="@+id/tabMypageImage"
            android:src="@drawable/nav_mypage_off"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_gravity="center"
            android:id="@+id/tabMypageText"
            android:textColor="@color/grayMain"
            android:textSize="@dimen/text_size_12dp"
            android:text="@string/main_tab_label_my_page"/>
    </LinearLayout>

</LinearLayout>
